fix des grosses erreurs

--- a/LRC/cours.tex
+++ b/LRC/cours.tex
@@ -61,7 +61,7 @@
     \begin{itemize}
         \item Atome 
         \item Connecteur : \begin{itemize}
-            \item Binary : $ \neg $ = "et", $\wedge$ = "Ou" $\vee$ = négation 
+            \item Binary : $ \vee $ = "ou", $\wedge$ = "et" $\neg$ = négation 
             \item DIAPO
         \end{itemize}
     \end{itemize}
@@ -83,8 +83,8 @@
     En d'autre mot ça semble être en fonction de ce que la fonction renvoie un booléen ou un paramètre.
     
     Variable est : \begin{itemize}
-        \item Libre : si elle est "muette", c'est à dire que si on la change elle ne change pas le résultat
-        \item Liée : inverse je crois ?
+        \item Liée (muette): Si elle est liée à un quantificateur, on peut donc changé librement son nom tant qu'on le change partout dans la formule
+        \item Libre : C'est l'inverse, pas liée à un quantificateur donc libre dans la formule. Par exemple dans la formule $ \exists y, x<y $, la variable x est libre et y est liée. Cette formule représente le fait que “Il existe un nombre plus grand que x”. Au final ici x est en lien avec l'énoncé, il est fixe.
     \end{itemize}
 
     Diapo interpretation : rien compris
