small change, i don't know if pdf is up to date

--- a/SIGNAL/cours.tex
+++ b/SIGNAL/cours.tex
@@ -96,7 +96,7 @@ On a \begin{itemize}
 On vas écrire les fonctions de signal en utilisant cette fonction
 \[
     \begin{cases}
-        1 &\text{si } t \geq 0\\
+        1 &\text{si } t \leq 0\\
         0 &\text{si } t > 0\\
     \end{cases} 
 .\]
