--- a/LRC/cours.tex
+++ b/LRC/cours.tex
@@ -204,8 +204,9 @@ L'avantage de cette méthode par rapport au tableau de vérité c'est qu'on a pa
 
 \subsubsection{Resolution in First Oder Logic}
 
-
-
+\underline{Nouveau cours du 21/09} \\
+\underline{Nouveau cours du 28/09} \\
+Pas de diapo au moment du cours
 
 
 
