--- a/BIMA/TME/TME2/TME2.ipynb
+++ b/BIMA/TME/TME2/TME2.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Names\n",
+    "VIN Charles <br/>\n",
+    "RODRIGUES DA ROCHA Mathilde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Practical work 2 : Fourier transform\n",
     "\n",
     "This practial work is dedicated to the study of the discrete Fourier transform applied on the two following images:\n",
@@ -61,8 +70,7 @@
     "def toVisualizeLogFT(If):\n",
     "    \"\"\" Array[complex] -> Array[float] \"\"\"\n",
     "    centeredFT = fftshift(If)\n",
-    "    return np.log(1 + np.abs(centeredFT))\n",
-    "    # return fftshift(np.log(1 + np.abs(If)))"
+    "    return np.log(1 + np.abs(centeredFT))"
    ]
   },
   {
@@ -248,8 +256,8 @@
    "source": [
     "def blend(I1,I2,alpha):\n",
     "    \"\"\" Array**2*float -> Array \"\"\"\n",
-    "    assert alpha <= 1 \n",
-    "    assert alpha >= 0 \n",
+    "    assert alpha <= 1, \"alpha doit être entre 0 et 1\"\n",
+    "    assert alpha >= 0, \"alpha doit être entre 0 et 1\"\n",
     "    return alpha*I1 + (1-alpha)*I2"
    ]
   },
@@ -304,6 +312,7 @@
     "blended_img = blend(son, sonrot, 1/2)\n",
     "plt.imshow(blended_img)\n",
     "plt.show()\n",
+    "\n",
     "If = computeFT(blended_img)\n",
     "If_toViz = toVisualizeFT(If)\n",
     "plt.imshow(thresholdImage(If_toViz, 10**5))"
@@ -732,7 +741,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ca ne marche pas dommage, pourtant les traits de visage ont toutes la mêmes direction. Il faudrait rendre l'algo plus sensible."
+    "Ca ne marche pas dommage, pourtant les traits de visage ont toutes la mêmes direction. Il faudrait rendre l'algo plus sensible à ceux là.\n",
+    "\n",
+    "Il prend trop en considération le background"
    ]
   },
   {
@@ -798,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En tout cas c'est pas size qui change le niveau de sensibilité."
+    "En tout cas c'est pas `size` qui change le niveau de sensibilité."
    ]
   }
  ],
