--- a/SIGNAL/cours.tex
+++ b/SIGNAL/cours.tex
@@ -25,7 +25,7 @@
 \theoremstyle{plain}% default
 \newtheorem{thm}{Théorème}[section]
 \newtheorem{lem}[thm]{Lemme}
-\newtheorem{prop}[thm]{Proposition}
+\newtheorem{prop}[thm]{Propriété}
 \newtheorem*{cor}{Corollaire}
 %\newtheorem*{KL}{Klein’s Lemma}
 
@@ -75,6 +75,8 @@ Table des matières
 \end{itemize}
 
 Quatres type de signal : Temps continu/discret X Amplitude Analogique(continue)/numérique(discret). D'un point de vu technique, le type d'amplitude ne change pas grand chose (ça rajoute juste une erreur qu'on modélise comme du bruit). Ce qui est important est le type de temps.
+
+\tableofcontents
 
 \section{Opération sur les signaux}
 \subsection{Quelques révisions}
@@ -170,7 +172,7 @@ On vas écrire les fonctions de signal en utilisant cette fonction
     Trouvez la convolution de $ x(t), h(t) $. Voir one note
 \end{exmp}
 
-\underline{Nouveau \textbf{TP} du 22/09} \\
+\underline{Nouveau \textbf{TP1} du 22/09} \\
 
 \begin{defn}[Parité]
     Fonction paire et impaire 
@@ -404,7 +406,7 @@ Avec $ H(S) $ la fonction de transfert, $ z_1, \dots, z_M $  les \textbf{zéros 
     Voir dessin OneNote
 \end{exmp}
 
-\underline{Nouveau \textbf{TP} du 29/09} \\
+\underline{Nouveau \textbf{TP2} du 29/09} \\
 
 \begin{exmp}[autre exemple ]
     Voir les dessins dans OneNote.
@@ -537,6 +539,141 @@ On imagine un point $ a $ dans le plans complexe $ S $
 \begin{exmp}[]
     OneNote
 \end{exmp}
+
+\paragraph*{DM pour le XX/XX}
+\begin{enumerate}
+    \item Trouver la transformée de Laplace inverse de \begin{enumerate}
+        \item $ X(S) = \frac{10 (S+1)}{S^2 + 4S + 3} $ 
+        \item $ X(S) = \frac{10 (S+1)e^{-2S}}{S^2 + 4S + 3} $ 
+        \item $ X(S) = \frac{20}{S(S^2 + 10S + 16)} $ 
+    \end{enumerate} 
+    \item Tracer le diagramme de Bode de $ H(S) = \frac{20S(S+100)}{(S+2)(S+10)} $. Tracer la réponse en fréquence de $ H(S) $ en utilisant MatLab. Comparer les résultats \begin{align*}
+        f&=1:0.001:1000\\
+        w&=2 \pi * f \\
+        S&=i*w \\
+        H&=S \dot{} * (S+100) / \text{la fonction H du dessus} \\
+        module &= 20 * \log_{10} (abs(H)) \\
+        angle&(H) \\
+        plot&(w, module) \\
+        plot&(w, angle) \\
+    \end{align*}
+\end{enumerate}
+
+\underline{Nouveau cours 2 du 30/09} \\
+
+\section{Signaux discret}
+
+Opération utiles sur un signal temps-discret
+\begin{itemize}
+    \item Décalage dans le temps 
+    \item Inversion dans le temps
+    \item Impulsion dans le temps
+\end{itemize}
+Signaux utile en temps discret
+\begin{itemize}
+    \item Impulsion
+    \item Echelon
+\end{itemize}
+Tout dans OneNote comme d'hab.
+
+\subsection{La convolution}
+Réponse d'un système temps-discret à une entrée externe
+\[
+    x[n] \to h[n] \to y[n]
+.\]
+\begin{defn}[Convolution]
+    \begin{align*}
+        x[n] \star h[n] &= \sum_{n=-\infty }^{\infty }x[n]h[n-m] \\
+            &= \sum_{n=-\infty }^{\infty }h[m] x[n-m]
+    \end{align*}
+\end{defn}
+\begin{prop}[de la convolution discète]
+    $ \text{} $ 
+    \begin{itemize}
+        \item Commutativité : $ x_1[n] \star x_2[n] = x_2[n] \star x_1[n]$ 
+        \item Associativité : $ x_1[n] (\star x_2[n] \star x_3[n]) = (x_1[n] \star x_2[n]) \star x_3[n]$ 
+        \item Distributivité : $ x_1[n] \star (x_2[n] + x_3[n]) = x_1[n] \star x_2[n] + x_1[n] \star x_3[n]$ 
+        \item Décalage : Si $ x_1[n] \star x_2[n] = c[n]$  donc $ x_1[n-m] \star x_2[n-p] = c[n-m-p] $ 
+        \item Causalité : Si $ x[n] $ et $ h[n] $ sont des signaux causaux (c'est à dire égal à zero pour $ n<0 $ ) alors $ x[n] \star h[n] = \sum_{m=0}^{n}x[m] h[n-m] $ 
+    \end{itemize}
+\end{prop}
+
+\begin{exmp}[]
+    Trouver la convolution de $ x[n] \star h[n] $ avec $ x[n] = 0.8^n u[n], h[n] = 0.3^n u[n] $ \begin{align*}
+        y[n] &= x[n] \star h[n] = \sum_{m=-\infty }^{\infty}x[m]h[n-m] \\
+            &= \sum_{m=0}^{n} x[m] h[n-m] \\
+            &= \sum_{m=0}^{n} 0.8^m u[m] 0.3^{n-m} u[n-m] \\
+            &= \sum_{m=0}^{n} 0.8^m 0.3^{n-m} \\
+            &= 0.3^n \sum_{m=0}^{n} (\frac{0.8}{0.3})^m  \\
+            \text{Sachant que } \sum_{K=m}^{n} r^K = \frac{r^{n+1} - r^m}{r - 1} \\ 
+        y[n] &= 2[0.8^{n+1} - 0.3^{n+1}]
+    \end{align*}
+\end{exmp}
+
+\begin{exmp}[Convolution discrete graphique]
+    \textbf{Exemple important} \\
+    Voir OneNote pour les deux fonctions ainsi que l'exemple.
+\end{exmp}
+
+\subsection{La transformé en Z}
+\begin{defn}[]
+    
+    \[
+        z\{x[n]\} = X[Z] = \sum_{n=-\infty }^{\infty }x[n]Z^{-n}
+    .\]
+    avec $ Z = e^{j \Omega }, \Omega = \omega T $ 
+\end{defn}
+
+\begin{exmp}[]
+    Calculez la transformé en $ Z $ de $ x[n] = \gamma^n u[n] $. C'est une des propriétés du tableau.
+    \begin{align*}
+        z\{x[n]\} &= X[Z] = \sum_{n=-\infty }^{\infty }x[n]Z^{-n} \\
+            &= \sum_{n=-\infty }^{\infty } \gamma ^n Z^{-n} u[n] \\
+            &= \sum_{n=0}^{\infty }(\frac{\gamma }{Z})^n \\
+            &= \frac{1}{1- (\gamma /Z)} \text{ car } \left| \frac{\gamma }{Z} \right| < 1 \\
+            &= \frac{Z}{Z - \gamma }, \left| \gamma  \right| < \left| Z \right| 
+    \end{align*} 
+    On a utilisé la formule suivante $ \sum_{n=0}^{\infty }x^n = \frac{1}{1-x} $ si $ \left| x \right| < 1 $ 
+\end{exmp}
+\begin{prop}[]
+    Propriété de la transformé en Z \begin{itemize}
+        \item $ z\{ x_1[n] + x_2[n] \} = X_1[n] + X_2[Z]$ 
+        \item $ z\{ a x[n]\} = a X[Z]$ 
+        \item $ z\{ x[n-m] u[n-m]\} = Z^{-m} X[Z]$ 
+        \item $ z\{ x_1[n] \star x_2[n]\} = X_1[Z] * X_2[Z]$ 
+    \end{itemize}
+\end{prop}
+
+\subsection{Transformé en Z inverse}
+\begin{defn}[]
+    \begin{align*}
+        X[Z] \to H[Z] \to &Y[Z] = X[Z]H[Z]
+       \Leftrightarrow & H[Z] = \frac{Y[Z]}{X[Z]}
+    \end{align*}
+    bref idk mais on regarde dans le tableau pour trouver un truc qui ressemble.
+\end{defn}
+\begin{exmp}[]
+    Trouver la transformé en Z inverse de 
+    \[
+        X[Z] = \frac{8Z - 19}{(Z-2)(Z-3)} = \frac{A}{Z-2} + \frac{B}{Z-3}
+    .\]
+    On regarde dans le tableau pour trouver un truc qui ressemble. Il y a la ligne sept mais elle est plutôt complexe, le prof préfère la six. Pour retomber sur la forme voulus on vas utiliser 
+    \[
+        \frac{X[Z]}{Z} = \frac{8Z - 19}{Z(Z-2)(Z-3)} = \frac{A}{Z} \frac{B}{Z-2} + \frac{B}{Z-3}
+    .\]
+    Comem ça on pourra rebasculer le $ Z $ et retomber sur la somme de forme désirée. \\
+    Décomposition en élément simple : $ A = \frac{-19}{6}, B = \frac{3}{2}, C = \frac{5}{3} $. Avec la ligne 6 du tableau, on retrombe sur
+    \begin{align*}
+        X[Z] &= \frac{-19}{6} \frac{Z}{Z} + \frac{3}{2} \frac{Z}{Z-2} + \frac{5}{3} \frac{Z}{Z-3} \\
+        z^{-1}\downarrow & \\
+        x[n] &= \frac{-19}{6} \delta [n] + (\frac{3}{2}2^n + \frac{5}{3}3^n)u[n]
+    \end{align*}
+\end{exmp}
+
+
+
+
+
 
 
 
